added ability to download/retrieve images, added basic twitter tweet functionality with media upload, laid out groundwork for relaying info in Discord

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "author": "Stardust Collective",
     "dependencies": {
         "date-and-time": "^0.14.0",
-        "discord.js": "^12.3.0"
+        "discord.js": "^12.3.0",
+        "file-type": "^14.7.1",
+        "node-fetch": "^2.6.0",
+        "object-sizeof": "^1.6.1",
+        "twit": "^2.2.11"
     }
 }
